force-app/main/default/objects/Product_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_discount__c</fullName>
        <label>Bundle discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CNX_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNX Product</label>
        <referenceTo>CNX_Products__c</referenceTo>
        <relationshipLabel>Product Bundles</relationshipLabel>
        <relationshipName>Product_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_bonus_Points__c</fullName>
        <label>Referral bonus (Points)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_discount__c</fullName>
        <label>Volume discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Product Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>